# hello-nanobanana

./: .gitignore  CLAUDE.md  README.md  example.env  pyproject.toml
docs/: 01-gemini-image-api.md  02-rate-limiting.md
examples/: 01-basic-generation.py  02-with-profile.py  03-batch-generation.py  test_generation.py
profiles/: cinematic.yaml  comic-panel.yaml  default.yaml
src/nanobanana/: __init__.py  batch.py  cli.py  client.py  config.py  generator.py  rate_limit.py
src/nanobanana/models/: __init__.py  image.py  profile.py
